# tanishPatchMakerHLS

./: CMakeLists.txt  patchMaker - Copy.cpp  patchMaker.cpp  patchMakerHeader - Copy.h  patchMakerHeader.h  temp.txt
PatchMaker_tanishGit/: .cproject  .project  .vitis_hls_log_all.xml  hls.app
PatchMaker_tanishGit/solution1/: csim.tcl  script.tcl  solution1.aps  solution1_data.json
PatchMaker_tanishGit/solution1/.autopilot/: .automg_exit  .autopilot_exit  .autosim_exit
PatchMaker_tanishGit/solution2/: script.tcl  solution2.aps  solution2_data.json
PatchMaker_tanishGit/solution3/: csim.tcl  script.tcl  solution3.aps
PatchMaker_tanishGit/solution4/: csim.tcl  script.tcl  solution4.aps  solution4_data.json
PatchMaker_tanishGit/solutionLC/: export.tcl  script.tcl  solutionLC.aps  solutionLC_data.json
PatchMaker_tanishGit/solutionSC/: cosim.tcl  script.tcl  solutionSC.aps  solutionSC_data.json
PatchMaker_tanishGit/solutionSC2/: script.tcl  solutionSC2.aps  solutionSC2_data.json
PatchMaker_tanishGit/solutionSC3/: script.tcl  solutionSC3.aps  solutionSC3_data.json
PatchMaker_tanishGit/solutionSC4/: script.tcl  solutionSC4.aps  solutionSC4.directive  solutionSC4_data.json
PatchMaker_tanishGit/solutionSC5/: script.tcl  solutionSC5.aps  solutionSC5_data.json
PatchMaker_tanishGit/solutionSC6/: directives.tcl  script.tcl  solutionSC6.aps  solutionSC6.directive  solutionSC6_data.json
PatchMaker_tanishGit/solutionTEST/: script.tcl  solutionTEST.aps  solutionTEST_data.json
tanishTestBench/: cppOutput.txt  cppOutputRef.txt  test_bench - Copy.cpp  test_bench.cpp
(+7044 files in other folders)
